Updated the allur report code