@@ -119,6 +119,14 @@
 	            <artifactId>gherkin</artifactId>
 	            <version>27.0.0</version>
 	        </dependency>
+	        
+	        <dependency>
+			    <groupId>org.projectlombok</groupId>
+			    <artifactId>lombok</artifactId>
+			    <version>1.18.32</version>
+			    <scope>provided</scope>
+			</dependency>
+
 	    </dependencies>
 	</dependencyManagement>
 
@@ -134,17 +142,37 @@
         
             <plugin>
 			    <groupId>org.apache.maven.plugins</groupId>
-			    <artifactId>maven-surefire-plugin</artifactId>
-			    <version>3.2.5</version>
+			    <artifactId>maven-compiler-plugin</artifactId>
+			    <version>3.13.0</version>
 			    <configuration>
-			        <includes>
-			            <include>**/TestRunner.java</include>
-			        </includes>
-			        <systemPropertyVariables>
-			            <cucumber.options>--plugin io.qameta.allure.cucumber7jvm.AllureCucumber7Jvm</cucumber.options>
-			        </systemPropertyVariables>
+			        <source>17</source>
+			        <target>17</target>
+			        <compilerArgs>
+			            <arg>--add-exports</arg>
+			            <arg>jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+			        </compilerArgs>
 			    </configuration>
 			</plugin>
+			
+			<plugin>
+			    <groupId>org.apache.maven.plugins</groupId>
+			    <artifactId>maven-compiler-plugin</artifactId>
+			    <version>3.13.0</version>
+			    <configuration>
+			        <annotationProcessorPaths>
+			            <path>
+			                <groupId>org.projectlombok</groupId>
+			                <artifactId>lombok</artifactId>
+			                <version>1.18.32</version>
+			            </path>
+			        </annotationProcessorPaths>
+			        <compilerArgs>
+			            <arg>--add-exports</arg>
+			            <arg>jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+			        </compilerArgs>
+			    </configuration>
+			</plugin>
+
 
         </plugins>
     </build>
